<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/SkinCare"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_img"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:alpha="0.8"
            android:textStyle="bold"
            android:textSize="18sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_input"
            android:hint="@string/input_your_valid_email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="45dp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_input"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="45dp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_color"
                android:text="@string/forgot_password"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:minHeight="30dp"
            android:padding="14dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/register_label"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
