<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SkinProblemSolutionActivity">


        <!-- Back Button -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:contentDescription="@string/des1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp" />

        <!-- Settings Button -->
        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_settings_24"
            android:contentDescription="@string/des2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp" />

        <!-- Title -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_problem"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />


        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skin_problem_solution"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_centerHorizontal="true" />

        <!-- Skin Options Container -->
        <GridLayout
            android:id="@+id/grid_skin_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_below="@id/tv_instruction"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:alignmentMode="alignMargins"
            android:rowOrderPreserved="false">

            <!-- Dry Skin -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/blackheads"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/blackheads" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/black_heads"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!-- Oily Skin -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/acne"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/acne" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acne"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!-- Normal Skin -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/sensitive"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sensitive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensitive_skin"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!-- Combination Skin -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/pigment"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pigment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pigment_spots"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </GridLayout>

    </RelativeLayout>








